--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -73,7 +73,7 @@ import { Download } from "lucide-astro";
   <h2 class="text-3xl font-bold mb-12 text-center">Tecnologías</h2>
 
   <div class="flex flex-wrap justify-center gap-4">
-    {["Java", "Python", "C#", "C++", "Flutter" , "JavaScript", "MySQL", "PostgreSQL", "MongoDB", "Android", "Kotlin", "Dart" , "HTML" , "CSS" , "Astro" , "Git" , "Github" , "Visual Basic" ].map((tech) => (
+    {["Java", "Python", "C#", "C++", "Flutter" , "JavaScript", "MySQL", "PostgreSQL", "MongoDB", "Android", "Kotlin", "Dart" , "HTML" , "CSS" , "Astro" , "Git" , "Github" , "Visual Basic" , "Ingles B2" ].map((tech) => (
       <span class="bg-gray-800 px-4 py-2 rounded-lg hover:bg-blue-500 transition duration-300 cursor-default">
         {tech}
       </span>
@@ -104,7 +104,7 @@ import { Download } from "lucide-astro";
   personal, creada con el objetivo de presentar de forma organizada la información
   profesional, habilidades técnicas, proyectos realizados y datos de contacto. "
   tech="Astro • Tailwind • HTML • CSS"
-  link="https://github.com/Nanielitow/portafolio"
+  link="https://github.com/Nanielitow/PortafolioWEB"
 />
 
     </div>
